--- a/snakeLadder.html
+++ b/snakeLadder.html
@@ -7,11 +7,26 @@
 	</head>
 	<body>
 		<div id="main">
-			<div class="box"></div>
-			<div class="box"></div><div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
+			<div class="players" id="red"></div>
+			<div class="players" id="blue"></div>
+            <img src="image/ladder.png" id="l1" alt="ladder">
+			<img src="image/ladder.png" id="l2" alt="ladder">
+			<img src="image/ladder.png" id="l3" alt="ladder">
+			<img src="image/ladder.png" id="l4" alt="ladder">
+			<img src="image/ladder.png" id="l5" alt="ladder">
+			<img src="image/ladder.png" id="l6" alt="ladder">
+			<img src="image/ladder.png" id="l7" alt="ladder">
+			<img src="image/ladder.png" id="l8" alt="ladder">
+			<img src="image/ladder2.png" id="l9" alt="ladder">
+			<img src="image/ladder2.png" id="l10" alt="ladder">			
+			<img src="image/s1.png" id="s1" alt="Snake">			
+			<img src="image/s2.png" id="s2" alt="Snake">			
+			<img src="image/s3.png" id="s3" alt="Snake">			
+			<img src="image/s4.png" id="s4" alt="Snake">			
+			<img src="image/s5.png" id="s5" alt="Snake">			
+			<img src="image/s6.png" id="s6" alt="Snake">			
+			<img src="image/s7.png" id="s7" alt="Snake">			
+			<img src="image/s8.png" id="s8" alt="Snake">
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -113,6 +128,22 @@
 			<div class="box"></div>
 			<div class="box"></div>
 		</div>
+        <div id="side">
+			<p id="p_turn">Active Player Turn</p>
+			<div id="cube_outer">
+				<div id="cube_inner">
+					<div id="front"><img src="image/1.png"></div>
+					<div id="back"><img src="image/2.png"></div>
+					<div id="left"><img src="image/3.png"></div>
+					<div id="right"><img src="image/4.png"></div>
+					<div id="top"><img src="image/5.png"></div>
+					<div id="bottom"><img src="image/6.png"></div>
+				</div>
+
+			</div>
+		</div>
+
+		
 	</body>	
 	<script src="js/script.js"></script>
 </html>
